Version 0.6.2 -- Apr 2010
------------------------------------------------------------------
+ Updated for phpws Core 2.0.0
+ PHP strict fixes
+ Some code tidy up

Version 0.6.1 -- Mar 2009
------------------------------------------------------------------
+ back-ported the following fixes to 0.6.1
+ when saving an item, succes now returns with admin menu (thanks wendall)
+ fixed setting links var in navLinks function (thanks wendall)
+ fixed bug preventing add to cart when inventory was not being used
  and qty in stock is 0 (thanks wendall)
+ improved some error checking in post item function (thanks wendall)

Version 0.6.0 -- Dec 2008
------------------------------------------------------------------
+ added is_array checks to links() array_merge in dept and item class
+ added currency and symbol to checkout and confirmation screens
+ added ability to change an item's dept
+ added ability to set minimum shipping charge
+ added ability to have free shipping on orders over $xx.xx
+ added ability to change order status from within list view
+ added notifications to order status updates


Version 0.5.0 -- Aug-Nov 2008
------------------------------------------------------------------
+ Initial writing of mod