@@ -61,6 +61,7 @@ function vshop_update(&$content, $currentVersion)
 + Updated for phpws Core 2.0.0
 + PHP strict fixes
 + Some code tidy up
++ Implemented Icon class
 
 
 </pre>';
