@@ -3,6 +3,7 @@ Version 0.6.2 -- Apr 2010
 + Updated for phpws Core 2.0.0
 + PHP strict fixes
 + Some code tidy up
++ Implemented Icon class
 
 Version 0.6.1 -- Mar 2009
 ------------------------------------------------------------------
